[package]
name = "rust_chain"
version = "0.1.0"
authors = ["Takumi Karibe <takumi.k.5610@gmail.com>", "shiki <shiki.tak@gmail.com>"]
edition = "2018"

[dependencies]
core = { package = "core", path = "./core/" }
nodes = { package = "nodes", path = "./nodes/" }
accounts = { package = "accounts", path = "./accounts/" }
utils = { package = "utils", path = "./utils/" }
