[package]
name = "command"
version = "0.1.0"
authors = ["Takumi Karibe <takumi.k.5610@gmail.com>"]
edition = "2018"

[dependencies]
rand = ""

nodes = { package = "nodes", path = "../nodes/" }
db = { package = "db", path = "../db/" }
utils = { package = "utils", path = "../utils/" }
rust_chain_error = { package = "error", path = "../error/" }
