[package]
name = "simulator"
version = "0.1.0"
authors = ["Takumi Karibe <takumi.k.5610@gmail.com>"]
edition = "2018"

[dependencies]
rand = ""

core = { package = "core", path = "../core/" }
nodes = { package = "nodes", path = "../nodes/" }
accounts = { package = "accounts", path = "../accounts/" }
db = { package = "db", path = "../db/" }
utils = { package = "utils", path = "../utils/" }
